# opensearch-genai-sdk-py

./: .bandit  .commitlintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REPOSITORY_REQUEST_DRAFT.md  SECURITY.md  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-validation.yml  release.yml
examples/: 01_tracing_basics.py  02_scoring.py  03_evaluate.py  04_autoevals.py  05_aws_sigv4.py  06_async_tracing.py  07_openai_auto_instrument.py  08_anthropic_openai_agent.py  agent_grpc.py  agent_http.py  console_collector.py  dummy_agent.py  mini_collector_grpc.py  mini_collector_http.py
src/opensearch_genai_sdk/: __init__.py  decorators.py  exporters.py  register.py  score.py
src/opensearch_genai_sdk/evals/: __init__.py  evaluate.py  protocol.py
src/opensearch_genai_sdk_py/: __init__.py  decorators.py  exporters.py  register.py  score.py
tests/: conftest.py  test_decorators.py  test_evaluate.py  test_exporters.py  test_protocol.py  test_register.py  test_score.py
